--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,47 @@
-.env
-.langgraph_api/
-.venv-agent/
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+.venv/
+.venv-*/
+venv/
+ENV/
+
+# Audio samples
+speech_samples/*
+!speech_samples/.gitkeep
+
+# PyCharm
+.idea/
+
+# VS Code
+.vscode/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# macOS
+.DS_Store
+
+# Environment variables
+.env
+
+# Model files
+*.bin
