--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,12 @@ zstandard==0.23.0
 pyaudio==0.2.14
 pywhispercpp==1.3.0
 python-dotenv==1.0.1
+# VAD components
+torch>=2.2.0
+torchaudio>=2.2.0
+silero-vad>=0.4.0
+# WebSocket server
+websockets>=12.0.0
+# TTS components
+kokoro>=0.9.4
+soundfile>=0.13.1
