--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,11 @@ httpx==0.28.1
 idna==3.10
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain-core==0.3.46
-langgraph==0.3.17
-langgraph-checkpoint==2.0.21
-langgraph-prebuilt==0.1.3
-langgraph-sdk==0.1.58
+langchain-core>=0.3.59
+langgraph>=0.4.7
+langgraph-checkpoint>=2.0.26
+langgraph-prebuilt>=0.2.1
+langgraph-sdk>=0.1.70
 langsmith==0.3.18
 msgpack==1.1.0
 orjson==3.10.15
@@ -40,6 +40,7 @@ websockets>=12.0.0
 # TTS components
 kokoro>=0.7.4
 soundfile>=0.13.1
-langchain-mcp-adapters==0.1.1
-langchain-community==0.3.24
-langchain-openai==0.3.18
+langchain-mcp-adapters>=0.1.1
+langchain-community>=0.3.24
+langchain-openai>=0.3.18
+langgraph-cli[inmem]
