--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,11 @@ idna==3.10
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain-core>=0.3.59
-langgraph>=0.4.7
+langgraph==0.4.8
 langgraph-checkpoint>=2.0.26
-langgraph-prebuilt>=0.2.1
+langgraph-prebuilt>=0.2.2
 langgraph-sdk>=0.1.70
-langsmith==0.3.18
+langsmith==0.3.37
 msgpack==1.1.0
 orjson==3.10.15
 packaging==24.2
