--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ soundfile>=0.13.1
 langchain-mcp-adapters>=0.1.1
 langchain-community>=0.3.24
 langchain-openai>=0.3.18
+langchain-groq>=0.3.2
 langgraph-cli[inmem]
 # Spotify Web API
 spotipy>=2.25.1
